[project]
name = "protocols-io-mcp-server"
version = "0.1.0"
description = "An MCP server that enables MCP clients like Claude Desktop to interact with data from protocols.io."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.10.1",
    "python-dotenv>=1.1.1",
]
