[project]
name = "protocols-io-mcp"
version = "0.1.0"
description = "An MCP server that enables MCP clients like Claude Desktop to interact with data from protocols.io."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.11.1",
    "hatchling>=1.27.0",
    "httpx>=0.28.1",
    "python-dotenv>=1.1.1",
]

[project.scripts]
protocols-io-mcp = "protocols_io_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/protocols_io_mcp"]
